# conduit

./: .env  .env.example  .gitignore  CLAUDE.md  design.pen  package-lock.json  package.json
.claude/agent-memory/designer/: MEMORY.md  project_conduit.md  reference_pencil_patterns.md
.claude/agent-memory/frontend-developer/: MEMORY.md  ui_input_component.md
.claude/agent-memory/ui-developer/: MEMORY.md  feedback_input_type_omission.md  project_design_system.md  project_stack.md
.claude/agents/: backend-developer.md  designer.md  frontend-developer.md  ui-developer.md
conduitb/: requirements.txt
conduitb/app/: __init__.py
conduitb/app/repositories/: livekit.py  scenario_repo.py  session_repo.py  supabase.py
conduitb/app/routes/: health.py  livekit.py  scenarios.py  sessions.py
conduitb/app/services/: livekit_service.py  scenario_service.py  session_service.py
conduitc/: .env  .gitignore  README.md  package-lock.json  package.json
conduitc/src/: App.tsx
conduitc/src/lib/: api.ts
lk-agents/coach-agent/: AGENTS.md  pyproject.toml
lk-agents/coach-agent/src/: agent.py
lk-agents/customer-agent/: .gitignore  AGENTS.md  pyproject.toml
scripts/: dev.sh
src/: App.tsx  ComponentLibraryPreview.tsx  index.css
src/pages/: ActiveSession.tsx  Dashboard.tsx
supabase/: config.toml  seed.sql
supabase/migrations/: 20260327014412_init_schema.sql  20260327042903_add_prompt_to_scenarios.sql
supabase/schemas/: 01_articles.sql  02_scenarios.sql  03_sessions.sql  04_messages.sql  05_session_results.sql  06_improvement_items.sql  07_knowledge_gaps.sql
(+27 files in other folders)
